# artk_cv_android

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/anirudh/android_opencv_template/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ARMarkerNFT.cpp  ar_toolkit.hpp  native-lib.cpp  trackingSub.cpp  utility.hpp
app/src/main/java/com/example/anirudh/android_opencv_template/: ARApplication.java  ImageProcessing.java  MainActivity.java
app/src/main/java/com/example/anirudh/android_opencv_template/AssetUtils/: AssetFileTransfer.java  AssetFileTransferException.java  AssetHelper.java  HashComputationException.java  Hasher.java
app/src/main/java/com/example/anirudh/android_opencv_template/Components/: CameraPreview.java
app/src/main/java/com/example/anirudh/android_opencv_template/GlComponents/: GLRenderer.java  GLSurface.java  MovieController.java
app/src/main/java/com/example/anirudh/android_opencv_template/Utilities/: AssetUtilities.java  GlobalUtils.java  ImageUtils.java  SettingsManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/anirudh/android_opencv_template/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
